test placeholder created

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </nav>
     </header>
     
-    <section>
-     
+    <section class="test">
+     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Test-Logo.svg/783px-Test-Logo.svg.png">
     </section>
   </body>
 
