--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
   <body>
     <header>
-      <nav class="left">
+      <nav class="highScores">
         <a href="https://www.google.com">View High Scores</a>
       </nav>
-      <nav class="right">
+      <nav class="timer">
         Timer
       </nav>
     </header>
     
     <section class="test">
-     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Test-Logo.svg/783px-Test-Logo.svg.png">
+     <img src="./assets/images/test.png">
     </section>
   </body>
 
