--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav class="highScores">
         <a href="https://www.google.com">View High Scores</a>
       </nav>
-      <nav class="timer">
+      <nav class="timer" id="countdown">
         Timer
       </nav>
     </header>
@@ -19,6 +19,9 @@
     <section class="test">
      <img src="./assets/images/test.png">
     </section>
-  </body>
+    
+    <script src="./assets/script/script.js"></script> 
+
+</body>
 
 </html>
