clickable image timer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     
     <section class="test">
-     <img src="./assets/images/test.png">
+      <button onclick=timer() class="button" id="timer"><img src="./assets/images/test.png" alt="test" /></button>
     </section>
     
     <script src="./assets/script/script.js"></script> 
