--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </nav>
     </header>
     
-    <section class="test">
-      <button onclick=timer() class="button" id="timer"><img src="./assets/images/test.png" alt="test" /></button>
+    <section id="test">
+
     </section>
     
     <script src="./assets/script/script.js"></script> 
