revamped button method

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       </nav>
     </header>
     
-    <section class = "button" id="test">
-
-    </section>
+    <section id="test"></section>
     
     <script src="./assets/script/script.js"></script> 
 
