timer works on load again

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </nav>
   </header>
 
-<div class="quiz-container">
+<section class="quiz"><div class="quiz-container">
   <div id="quiz"></div>
 </div>
 <button id="previous">Previous Question</button>
 <button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
-<div id="results"></div>
+<div id="results"></div> </section>
 
 <script src="./assets/script/script.js"></script>
