--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
 <section class="quiz"><div class="quiz-container">
-  <div id="quiz"></div>
+  <div id="quiz"><button id="startQuiz">Start Quiz</button></div>
 </div>
 <button id="previous">Previous Question</button>
 <button id="next">Next Question</button>
