--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <button id="previous">Previous Question</button>
 <button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
-<div id="results"></div> </section>
+<div id="results"></div> 
+<div id="score"></div></section>
 
 <script src="./assets/script/script.js"></script>
