score no longer goes below zero

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div> 
-<div id="score"></div></section>
+<div id="score"></div>
+<div id="initials"></div></section>
 
 <script src="./assets/script/script.js"></script>
