--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <button id="submit">Submit Quiz</button>
 <div id="results"></div> 
 <div id="score"></div>
+<div id="initials"></div>
 </section>
 
 <script src="./assets/script/script.js"></script>
